--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ul {
+    @apply list-disc ml-4;
+  }
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 12px;
